# OpticalFlowStats

./: .gitignore  CMakeLists.txt  README.md  config.json  todo-tree.txt
apps/: CMakeLists.txt  flow_analyzer.cpp
src/: CMakeLists.txt
src/lib_optflowstats/: CMakeLists.txt
src/lib_optflowstats/include/optflowstats/: predefstats.hpp
src/lib_optflowstats/src/: predefstats.cpp  stats_definitions.cpp  stats_definitions.cu  stats_definitions.hpp
src/lib_optflowstats/tests/: CMakeLists.txt  utests.cpp
src/lib_statcoll/: CMakeLists.txt
src/lib_statcoll/include/statcoll/: base_classes.hpp  collection.hpp  collectionPrinter.hpp  collector.hpp  mtype_traits.hpp  statistics_types.hpp
src/lib_statcoll/tests/: CMakeLists.txt  ut_collection.hpp  ut_collector.hpp  ut_statistics_types.hpp  utests.cpp
